<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ford Status Widget</string>
    <string name="action_fordpass">FordPass Alert</string>
    <string name="action_login">FordPass Log-in</string>
    <string name="action_profile">Manage Profiles</string>
    <string name="action_OTA">OTA Update Info</string>
    <string name="action_chooseapp">Choose Linked Apps</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_backup">Save Settings</string>
    <string name="action_restore">Restore Settings</string>
    <string name="action_copylog">Save Logfile</string>
    <string name="action_view_dcfc_logs">View Fast Charge Logs</string>
    <string name="action_update">Check For Update</string>
    <string name="action_vehicle">Manage Vehicles</string>
    <string name="action_color">Set Vehicle Color</string>
    <string name="action_reminder">Set Charging Reminder</string>
    <string name="update_info">Update Information</string>
    <string name="action_settings">Settings</string>
    <string name="app_widget_description">Display status info for Ford vehicles</string>
    <string name="reminder_instructions">Set a reminder time to plug in if the vehicle\'s charge is below a given threshold.</string>
    <string name="profile_instructions">Click on a profile to log in with that VIN.  Click on an unused entry to create a login for a new vehicle.  Click on the "X" to delete a profile.</string>
    <string name="vehicle_instructions">Select which vehicles should be visible within the widget. Click on the \"+\" icon to add a new vehicle. Swipe right on a vehicle to remove it. Vehicles whose VIN are struck-through are not currently supported; to request support, enable logging to capture data and create an issue on GitHub (https://github.com/khpylon/MachEWidget).</string>
    <string name="VIN">"Your vehicle's VIN"</string>
    <string name="widget_update_frequency">Time between widget updates</string>
    <string name="units">Units to display</string>
    <string name="enable_commands">Enable lock and start commands on widget double-tap</string>
    <string name="enable_app_launchers">Enable app launcher buttons</string>
    <string name="choose_apps_title">Allow any app to be linked to \"charger\" widget </string>
    <string name="transparent_back">Use transparent background</string>
    <string name="last_refresh_time">Show time of last refresh instead of elapsed time</string>
    <string name="show_location">Display location on widget</string>
    <string name="save_credentials">Save log-in credentials</string>
    <string name="use_credentials">Use stored credentials</string>
    <string name="logging">Enable logging</string>
    <string name="logging_summary">Store logging info in a local file, separate from system logs</string>
    <string name="github_title">GitHub repo</string>
    <string name="github_summary">Link to the code repository</string>
    <string name="battery_opt">Battery optimization</string>
    <string name="battery_notification_title">Enable battery optimization notification</string>
    <string name="force_updates">Automatic forced updates</string>
    <string name="force_updates_summary">If vehicle data is more than 6 hours old, automatically force an update.  WARNING: This may cause a drain on the 12V battery.</string>
    <string name="user_force_updates">Enable forced refresh</string>
    <string name="user_force_updates_summary">Allow user-forced updates from the widget.  WARNING: This may cause a drain on the 12V battery.</string>
    <string name="use_colors">Enable color display of vehicle</string>
    <string name="use_image">Display vehicle photo instead of logo on full-size widget</string>
    <string name="zenmode">Do not update while Do Not Disturb is active</string>
    <string name="hibernate_api">Hibernate app</string>
    <string name="hibernate_api_summary">Don\'t pull data until public API is released</string>
    <string name="check_charging">Display charge session info</string>
    <string name="check_charging_summary">When charging, display charge rate and energy added</string>
    <string name="check_dcfastcharging_title">Display DCFC info</string>
    <string name="check_dcfastcharging_summary">When DC fast charging, request updates every 30 seconds</string>
    <string name="dcfclog">Save DCFC logs</string>
    <string name="dcfclog_summary">Save fast charging info so it can be viewed in the app (Display DCFC info must also be enabled).</string>
    <string name="activity_settings_language_title">Language</string>
    <string name="activity_settings_language_summary">Language used by the app</string>
    <string name="version" translatable="false">App version</string>
    <string name="VIN_key" translatable="false">"VIN"</string>
    <string name="update_frequency_key" translatable="false">"update_frequency"</string>
    <string name="units_key" translatable="false">units</string>
    <string name="transp_bg_key" translatable="false">"transparentBackground"</string>
    <string name="enable_commands_key" translatable="false">enableCommands</string>
    <string name="show_app_links_key" translatable="false">"showAppLinks"</string>
    <string name="show_all_apps_key" translatable="false">"showAllApps"</string>
    <string name="last_refresh_time_key" translatable="false">refreshDisplayTime</string>
    <string name="show_location_key" translatable="false">showLocation</string>
    <string name="logging_key" translatable="false">logging</string>
    <string name="save_credentials_key" translatable="false">saveCredentials</string>
    <string name="github_repo_key" translatable="false">githubRepo</string>
    <string name="version_key" translatable="false">appVersion</string>
    <string name="last_version_key" translatable="false">lastVersion</string>
    <string name="widget_mode_key" translatable="false">widget_mode</string>
    <string name="battery_opt_key" translatable="false">batteryOptimization</string>
    <string name="userId_key" translatable="false">userId</string>
    <string name="forceUpdate_key" translatable="false">forceUpdate</string>
    <string name="batteryNotification_key" translatable="false">batteryNotification</string>
    <string name="user_forcedUpdate_key" translatable="false">userForcefUpdate</string>
    <string name="use_colors_key" translatable="false">useColors</string>
    <string name="use_image_key" translatable="false">useImage</string>
    <string name="zenmode_key" translatable="false">zenMode</string>
    <string name="hibernate_api_key" translatable="false">hibernateAPI</string>
    <string name="check_charging_key" translatable="false">checkCharging</string>
    <string name="check_dcfastcharging_key" translatable="false">check_DCfastcharging_key</string>
    <string name="dcfclog_key" translatable="false">save_DCfastcharging_key</string>
    <string name="lvb_display_key" translatable="false">lvb_display</string>
    <string name="display_kWh_key" translatable="false">display_kWh</string>
    <string name="charging_preferences_key" translatable="false">charging_preferences_key</string>
    <string name="language_key" translatable="false">language_key</string>
    <string name="units_kphkpa" translatable="false">1</string>
    <string name="units_mphpsi" translatable="false">2</string>
    <string name="units_kphpsi" translatable="false">3</string>
    <string name="units_kphbar" translatable="false">4</string>
    <string name="surveyVersion_key" translatable="false">surveyVersion</string>
    <string name="fordpass_description">Please review this info about sharing your FordPass login.</string>
    <string name="clear_alert">Clear Alert</string>
    <string name="install_update">Install Update</string>
    <string name="disclaimer">Your login credentials are only used to gain access to your FordPass account.  They are not stored in the app.</string>
    <string name="fordpassPackage" translatable="false">"com.ford.fordpass"</string>
    <string name="title_activity_color" translatable="false">ColorActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="correct_VIN_length">The VIN must be 17 characters long.</string>
    <string name="username_or_e_mail">Username or E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="vehicles_vin">Vehicle\'s VIN</string>
    <string name="vehicle_s_nickname">Vehicle\'s Nickname</string>
    <string name="dcfc_active" translatable="false">dcfc</string>
    <string name="title_activity_charging" translatable="false">ChargingActivity</string>
    <string name="charging_information_title">Charging Information</string>
    <string name="charging_infomation_summary">Only applicable to electric vehicles</string>
    <string name="enable_commands_summary">NOTICE: unavailable until Ford\'s public API is released.</string>
    <string name="lvb_display_description">12V Battery Info Displayed</string>
    <string name="kw_rate_kwh_added">\n{0}kW rate, {1}kWh added</string>
    <string name="charging_target_reached">- Target Reached</string>
    <string name="charging_completed">- Completed</string>
    <string name="charging_preconditioning">- Preconditioning</string>
    <string name="charging_just_charging">- Charging</string>
    <string name="good">Good</string>
    <string name="warning">Warning</string>
    <string name="just_now_description">just now</string>
    <string name="app_no_longer_installed">App is no longer installed</string>
    <string name="last_update_label">"Last update at "</string>
    <string name="last_alarm_label">"Last alarm at "</string>
    <string name="battery_energy_remaining_label">"Battery energy remaining is "</string>
    <string name="battery_temperature_label">"Battery temperature is "</string>
    <string name="battery_voltage_label">"Battery voltage is "</string>
    <string name="unavailable_label">unavailable.</string>
    <string name="ambient_temperature_label">"Ambient temperature is "</string>
    <string name="token_is_being_refreshed_description">The token is being refreshed; this may take a minute.</string>
    <string name="forcing_a_refresh_description">Forcing a refresh; this may take 30 seconds.</string>
    <string name="force_update_delay_description">"Cannot force update for another "</string>
    <string name="too_many_forced_updates_description">"Too many forced updates; feature disabled for "</string>
    <string name="lvb_status_bad_description">The LVB status is not good.</string>
    <string name="error_title">Error</string>
    <string name="no_apps_found">No other apps were found.</string>
    <string name="remove_app_selection">Remove this app</string>
    <string name="activity_choose_app_link_app_to">Link app to</string>
    <string name="activity_color_wireframe_color">Wireframe color</string>
    <string name="activity_color_white">White</string>
    <string name="activity_color_black">Black</string>
    <string name="activity_color_auto">Auto</string>
    <string name="activity_color_save">Save</string>
    <string name="activity_color_reset">Reset</string>
    <string name="activity_color_auto_button">Auto</string>
    <string name="activity_color_autoImage_hint">Use stored image as color source.</string>
    <string name="activity_color_rgb_value">RGB value: #</string>
    <string name="close_button">Close</string>
    <string name="ignore_button">Ignore</string>
    <string name="remote_commands_disabled_title">Remote commands have been disabled.</string>
    <string name="activity_reminder_notification_enabled">Notification enabled:</string>
    <string name="activity_reminder_notification_time">Notification time:</string>
    <string name="activity_reminder_threshold_battery_level">Threshold battery level:</string>
</resources>