<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="@string/VIN_key"
        app:title="@string/VIN"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:key="@string/update_frequency_key"
        app:defaultValue="30"
        app:entries="@array/pref_update_titles"
        app:entryValues="@array/pref_update_values"
        app:negativeButtonText="@null"
        app:positiveButtonText="@null"
        app:title="@string/widget_update_frequency"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="@string/save_credentials_key"
        app:defaultValue="false"
        app:title="@string/save_credentials" />

    <SwitchPreferenceCompat
        app:key="@string/last_refresh_time_key"
        app:defaultValue="false"
        app:singleLineTitle="false"
        app:title="@string/last_refresh_time" />

    <SwitchPreferenceCompat
        app:key="@string/show_app_links_key"
        app:defaultValue="true"
        app:singleLineTitle="false"
        app:title="@string/enable_app_launchers" />

    <SwitchPreferenceCompat
        app:key="@string/show_all_apps_key"
        app:defaultValue="false"
        app:dependency="showAppLinks"
        app:singleLineTitle="false"
        app:title="@string/choose_apps_title" />

    <SwitchPreferenceCompat
        app:key="@string/show_location_key"
        app:defaultValue="true"
        app:singleLineTitle="false"
        app:title="@string/show_location" />

    <SwitchPreferenceCompat
        app:key="@string/show_OTA_key"
        app:defaultValue="true"
        app:singleLineTitle="false"
        app:title="@string/show_OTA" />

    <SwitchPreferenceCompat
        app:key="@string/enable_commands_key"
        app:defaultValue="false"
        app:singleLineTitle="false"
        app:title="@string/enable_commands" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/show_profiles_key"
        app:singleLineTitle="false"
        app:title="@string/show_profiles" />

    <ListPreference
        app:key="@string/units_key"
        app:defaultValue="0"
        app:entries="@array/units_titles"
        app:entryValues="@array/units_values"
        app:negativeButtonText="@null"
        app:positiveButtonText="@null"
        app:title="@string/units"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/transp_bg_key"
        app:singleLineTitle="false"
        app:title="@string/transparent_back" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:key="@string/f150_mode_key"
        app:singleLineTitle="false"
        app:summary="Make the widget appearance and app name reflect an F-150 vehicle"
        app:title="@string/f150_mode" />

    <PreferenceCategory
        app:title="Developer options">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/okhttp3_key"
            app:singleLineTitle="false"
            app:title="@string/okhttp3" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="About the app">
        <Preference
            app:key="@string/github_repo_key"
            app:selectable="true"
            app:title="@string/github_title"
            app:summary="@string/github_summary"/>
        <Preference
            app:key="@string/version_key"
            app:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>