<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.khughes.machewidget.MainActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="10"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="10"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ota_view"
        android:orderInCategory="20"
        android:title="@string/action_OTA"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="20"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chooseapp"
        android:orderInCategory="30"
        android:title="@string/action_chooseapp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>