<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/widget_margin">

        <Spinner
            android:id="@+id/VIN_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/quantum_white_100"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="9"
            android:padding="@dimen/widget_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/quantum_white_100"
                android:text="@string/reminder_instructions"
                android:layout_margin="10dp"/>

            <Switch
                android:id="@+id/batteryNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/quantum_white_100"
                android:text="@string/activity_reminder_notification_enabled"
                android:checked="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/widget_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/quantum_white_100"
                    android:text="@string/activity_reminder_notification_time"/>

                <Spinner
                    android:id="@+id/hourSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/widget_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/quantum_white_100"
                android:text="@string/activity_reminder_threshold_battery_level"/>

            <Spinner
                android:id="@+id/batteryLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>